--- a/index.html
+++ b/index.html
@@ -97,50 +97,53 @@
                             <li><a class="active">灾情统计</a></li>
                             <li><a>响应监测</a></li>
                         </ul>
-                        <div class="tongji">
-                            <div>
-                                <i class="iconfont icon-yonghu"></i>
-                                受灾人口<span>1</span>人
+                        <div class="navCont on">
+                            <div class="tongji">
+                                <div>
+                                    <i class="iconfont icon-yonghu"></i>
+                                    受灾人口<span>1</span>人
+                                </div>
+                                <div>
+                                    <i class="iconfont icon-fenxi"></i>
+                                    经济损失<span>0.0</span>万元
+                                </div>
+                                <div>
+                                    <i class="iconfont icon-zhuye"></i>
+                                    倒塌房屋<span>0</span>间
+                                </div>
+                                <div>
+                                    <i class="iconfont icon-pie"></i>
+                                    受灾面积<span>0.0</span>公顷
+                                </div>
                             </div>
-                            <div>
-                                <i class="iconfont icon-fenxi"></i>
-                                经济损失<span>0.0</span>万元
-                            </div>
-                            <div>
-                                <i class="iconfont icon-zhuye"></i>
-                                倒塌房屋<span>0</span>间
-                            </div>
-                            <div>
-                                <i class="iconfont icon-pie"></i>
-                                受灾面积<span>0.0</span>公顷
-                            </div>
-                        </div>
-                        <div class="cityAndqu">
-                            <div class="cityNum">
-                                <div class="cityTitle">市受灾情况统计</div>
-                                <div class="cityTuli">
-                                    <span>
-                                        <i class="iconfont icon-shanxing yes"></i>受灾市<br>
-                                        <i class="iconfont icon-shanxing no"></i>未受灾市
-                                    </span>
-                                    <div class="cityPie">
-                                        <img src="./images/citypie_12.png" alt="" srcset="">
+                            <div class="cityAndqu">
+                                <div class="cityNum">
+                                    <div class="cityTitle">市受灾情况统计</div>
+                                    <div class="cityTuli">
+                                        <span>
+                                            <i class="iconfont icon-shanxing yes"></i>受灾市<br>
+                                            <i class="iconfont icon-shanxing no"></i>未受灾市
+                                        </span>
+                                        <div class="cityPie">
+                                            <img src="./images/citypie_12.png" alt="" srcset="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="quNum">
+                                    <div class="quTitle">区县受灾情况统计</div>
+                                    <div class="quTuli">
+                                        <span>
+                                            <i class="iconfont icon-shanxing yes"></i>受灾区县<br>
+                                            <i class="iconfont icon-shanxing no"></i>未受灾区县
+                                        </span>
+                                        <div class="quPie">
+                                            <img src="./images/qupie_12.png" alt="" srcset="">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="quNum">
-                                <div class="quTitle">区县受灾情况统计</div>
-                                <div class="quTuli">
-                                    <span>
-                                        <i class="iconfont icon-shanxing yes"></i>受灾区县<br>
-                                        <i class="iconfont icon-shanxing no"></i>未受灾区县
-                                    </span>
-                                    <div class="quPie">
-                                        <img src="./images/qupie_12.png" alt="" srcset="">
-                                    </div>
-                                </div>
-                            </div>
                         </div>
+                        <div class="navCont">响应监测内容</div>
                     </div>
                 </div>
                 <div id="disasterReport">
@@ -151,12 +154,16 @@
                             <li><a>资金</a></li>
                             <li><a>报告</a></li>
                         </ul>
-                        <div class="mingxi">
-                            <div>
-                                <a href="">物资接收情况</a></div>
-                            <div>
-                                <a href="">物资发放情况</a></div>
+                        <div class="navCont on">
+                            <div class="mingxi">
+                                <div>
+                                    <a href="">物资接收情况</a></div>
+                                <div>
+                                    <a href="">物资发放情况</a></div>
+                            </div>
                         </div>
+                        <div class="navCont">资金内容</div>
+                        <div class="navCont">报告内容</div>
                     </div>
                 </div>
             </div>
@@ -329,13 +336,16 @@
                             <li><a class="active"> 灾情列表</a></li>
                             <li><a>新产生灾情</a></li>
                         </ul>
-                        <ol class="weatherList">
-                            <li class="green "><a href="" class="weatherActive"> 风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
-                            <li class="yellow"><a href="">风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
-                            <li class="orange"><a href="">风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
-                            <li class="red"><a href="">台风 2018-08-16 17:39:00</a> <span>统计</span></li>
-                            <li class="blue"><a href="">洪涝 2018-08-16 17:39:00</a> <span>统计</span></li>
-                        </ol>
+                        <div class="navCont on">
+                            <ol class="weatherList">
+                                <li class="green "><a href="" class="weatherActive"> 风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
+                                <li class="yellow"><a href="">风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
+                                <li class="orange"><a href="">风雹 2018-08-16 17:39:00</a> <span>统计</span></li>
+                                <li class="red"><a href="">台风 2018-08-16 17:39:00</a> <span>统计</span></li>
+                                <li class="blue"><a href="">洪涝 2018-08-16 17:39:00</a> <span>统计</span></li>
+                            </ol>
+                        </div>
+                        <div class="navCont">新产生灾情</div>
                     </div>
                 </div>
                 <div id="historyBox">
@@ -344,9 +354,13 @@
                         <li><a>便携站</a></li>
                         <li><a>历史</a></li>
                     </ul>
-                    <div class="mediaBox">
-                        <img src="./images/car_11.jpg" alt="" srcset="">
+                    <div class="navCont on">
+                        <div class="mediaBox">
+                            <img src="./images/car_11.jpg" alt="" srcset="">
+                        </div>
                     </div>
+                    <div class="navCont">便携站内容</div>
+                    <div class="navCont">历史内容</div>
                 </div>
                 <div id="liveBox">
                     <div class="liveTitle">工作组动态</div>
@@ -360,7 +374,7 @@
 
     <script src="./js/jquery-1.9.0.js"></script>
     <script>
-        // 根据屏幕尺寸自适应，单位值/100 rem.
+        // 根据屏幕尺寸自适应，"单位值/100" rem.
         (function (win, doc) {
             if (!win.addEventListener) return;
             var html = document.documentElement;
@@ -376,7 +390,7 @@
         // nav切换
         $(".nav li").on("click", function () {
             $(this).find("a").addClass("active").parents("li").siblings().find("a").removeClass("active");
-            $(".navCont").hide().eq($(this).index()).show();
+            $(this).parents("ul").siblings(".navCont").hide().eq($(this).index()).show("fast");
         })
 
         //全屏
